--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -19,7 +19,8 @@
       </div>
     </div>
   </div>
-  <div class="mt-4 footer-copyright text-center py-3">© 2018 Copyright: Nate Wilson<div>
+  <div class="mt-4 footer-copyright text-center py-3">© 2018 Copyright: Nate Wilson
+    <div>
 </footer>
 
 
