added post form functionality and flash messages edited css fixed titles

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -10,33 +10,41 @@
           <hr class="my-4">
           <h2>Pizza </h2>
           <p>(12 inch pies)</p>
-          <div class="container text-left">
+          <div class="menu-margin container text-left">
             <div class="row">
               <div class="col">
-                <ul class="menu">
+                <ul>
                   <li>
-                    <p>Olive Oil, Sea Salt, Rosemary<span class="price">$16</span>
+                    <h4>Simpleton<span class="price">$15</span></h4>
+                    <p><em>Olive oil, sea salt, rosemary</em></p>
                   </li>
                   <li>
-                    <p>Tomato Pie<span class="price">$15</span></p>
+                    <h4>Tomato Pie<span class="price">$15</span></h4>
+                    <p><em>Tomato, garlic</em></p>
                   </li>
                   <li>
-                    <p>Margherita<span class="price">$16</span></p>
+                    <h4>Margherita<span class="price">$16</span></h4>
+                    <p><em>Tomato sauce, vegan mozz, basil</em></p>
                   </li>
                   <li>
-                    <p>Potato, Rosemary, Sea Salt<span class="price">$15</span></p>
+                    <h4>Hot potato<span class="price">$16</span></h4>
+                    <p><em>Potato, rosemary, sea salt</em></p>
                   </li>
                   <li>
-                    <p>Pesto, Tomato, Mozzerella<span class="price">$15</span></p>
+                    <h4>Pesto tomato<span class="price">$16</span></h4>
+                    <p><em>Pesto, tomato, vegan mozz</em></p>
                   </li>
                   <li>
-                    <p>Spinach, Ricotta, Garlic, Artichoke<span class="price">$15</span></p>
+                    <h4>Rooter's special<span class="price">$17</span></h4>
+                    <p><em>Spinach, Ricotta, Garlic, Artichoke</em></p>
                   </li>
                   <li>
-                    <p>BBQ Jackfruit<span class="price">$17</span></p>
+                    <h4>BBQ<span class="price">$17</span></h4>
+                    <p><em>BBQ sauce, jackfruit, garlic aioli</em></p>
                   </li>
                   <li>
-                    <p>Balsamic, Peach, Ricotta, Basil<span class="price">$17</span></p>
+                    <h4>Fruity<span class="price">$17</span></h4>
+                    <p><em>Balsamic, Peach, Ricotta, Basil</em></p>
                   </li>
                 </ul>
               </div>
@@ -44,18 +52,18 @@
           </div>
           <hr class="my-4">
           <h2>Salads</h2>
-          <div class="container text-left">
+          <div class="menu-margin container text-left">
             <div class="row">
               <div class="col">
                 <ul class="menu">
                   <li>
-                    <p>Ceaser<span class="price">$9</span>
+                    <h4>Ceaser<span class="price">$9</span></h4>
                   </li>
                   <li>
-                    <p>Balsamic<span class="price">$9</span></p>
+                    <h4>Balsamic<span class="price">$9</span></h4>
                   </li>
                   <li>
-                    <p>Caprese<span class="price">$8</span></p>
+                    <h4>Caprese<span class="price">$8</span></h4>
                   </li>
                 </ul>
               </div>
@@ -63,18 +71,18 @@
           </div>
           <hr class="my-4">
           <h2>Appetizers</h2>
-          <div class="container text-left">
+          <div class="menu-margin container text-left">
             <div class="row">
               <div class="col">
                 <ul class="menu">
                   <li>
-                    <p>Gnocchi<span class="price">$10</span>
+                    <h4>Gnocchi<span class="price">$10</span></h4>
                   </li>
                   <li>
-                    <p>Fried Squash Blossoms<span class="price">$10</span></p>
+                    <h4>Fried Squash Blossom <span class="price">$10</span></h4>
                   </li>
                   <li>
-                    <p>Mozzerella Sticks<span class="price">$8</span></p>
+                    <h4>Mozz Sticks<span class="price">$8</span></h4>
                   </li>
                 </ul>
               </div>
