--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,25 @@
+/*
+  Header Navbar and background
+*/
+
+body,
+html {
+  height: 100%;
+  background: rgb(174, 175, 177);
+  background: linear-gradient(90deg, rgba(174, 175, 177, 1) 0%, rgba(50, 50, 50, 1) 100%);
+  font-family: "dosis", sans-serif;
+}
+
+
+.bg {
+  background-image: url("/images/pizzapies.jpg");
+  height: 40vh;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 .navbar {
   border: none;
   border-radius: 0;
@@ -7,47 +29,35 @@
   padding-bottom: 0;
 }
 
-body,
-html {
-  height: 100%;
-  background: rgb(174, 175, 177);
-  background: linear-gradient(90deg, rgba(174, 175, 177, 1) 0%, rgba(24, 24, 24, 1) 100%);
-}
 
-.bg {
-  /* The image used */
-  background-image: url("/images/pizzapies.jpg");
+/* 
+  Jumbotron and contents button etc
+*/
 
-  /* Full height */
-  height: 40vh;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
+p {
+  font-size: 1.3em;
 }
 
 .jumbotron {
   margin-top: 20px;
   font-family: 'dosis';
-  font-size: 1.5em;
+  font-size: 1em;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   background-image: url("https://images.unsplash.com/photo-1525034687081-c702010cb70d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ff7a4507eafd365d7f5d6badcd6d7163&auto=format&fit=crop&w=1650&q=80");
-  /* Full height */
   height: 100%;
-
-  /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   font-weight: 500;
+}
 
+.menu-margin {
+  padding-left: 0px;
 }
 
 .rs-name {
   font-family: 'Fredericka the Great', cursive;
-  font-size: 2em;
+  font-size: 4em;
 }
 
 #bookbtn {
@@ -58,7 +68,7 @@ html {
 }
 
 #bookbtn:hover {
-  color:lightgray;
+  color: lightgray;
 }
 
 #circle-img {
@@ -78,7 +88,7 @@ html {
 }
 
 #schedbtn:hover {
-  color:lightgray;
+  color: lightgray;
 }
 
 #vegan {
@@ -86,7 +96,7 @@ html {
 }
 
 .lead {
-  font-size: 1.5em;
+  font-size: 2em;
 }
 
 hr {
@@ -94,32 +104,6 @@ hr {
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-}
-
-.footer {
-  margin-top: 40px;
-  width: 100%;
-  min-height: 100px;
-  background-color: #222;
-  color: lightgray;
-}
-
-.footer-copyright {
-  font-size:14px;
-  background-color: black;
-}
-
-i {
-  font-size: 3em;
-}
-
-
-a {
-  color: lightgray;
-}
-
-a:hover {
-  color: lightgray;
 }
 
 .contact {
@@ -134,7 +118,7 @@ a:hover {
 }
 
 #contactbtn:hover {
-  color:lightgray;
+  color: lightgray;
 }
 
 #menuheader {
@@ -154,23 +138,42 @@ h2 {
   float: right;
 }
 
-.menu {
-  margin-top: 20px;
-  margin-right: 5%;
-  margin-left: 5%;
-  line-height: 1em;
+/*
+  alert message margins
+*/
+
+.alert {
+  margin-top:20px;
+  margin-bottom:0px;
 }
 
-html {
-  font-size: 16px;
+
+/*
+  Footer and contents
+*/
+
+a {
+  color: white;
 }
-@media screen and (min-width: 320px) {
-  html {
-    font-size: calc(16px + 6 * ((100vw - 320px) / 680));
-  }
+
+a:hover {
+  color: lightgray;
 }
-@media screen and (min-width: 1000px) {
-  html {
-    font-size: 22px;
-  }
+
+i {
+  font-size: 3em;
 }
+
+.footer {
+  margin-top: 40px;
+  width: 100%;
+  min-height: 100px;
+  background-color: #222;
+  color: lightgray;
+}
+
+.footer-copyright {
+  font-size: 14px;
+  background-color: black;
+}
+
