--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,21 +4,21 @@
     <div class="row">
       <div class="col">
         <div class="jumbotron">
-          <h1 class="display-4 rs-name">Any <span id="vegan">questions</span>?</h1>
-          <p class="lead">We are here to help!</p>
+          <h1 class="display-4 rs-name">Get <span id="vegan">in</span> touch</h1>
+          <p class="lead">with any questions or anything else we can do for you!</p>
           <hr>
-          <form class="contact">
+          <form class="contact" method="POST" action="/contact">
             <div class="form-group">
-              <input class="form-control" type="text" name="" placeholder="name" />
+              <input class="form-control" type="text" name="name" placeholder="name" />
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="" placeholder="email" />
+              <input class="form-control" type="text" name="email" placeholder="email" />
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="" placeholder="What can we do for you?"></textarea>
+              <textarea class="form-control" name="message" placeholder="What can we do for you?"></textarea>
             </div>
             <div class="form-group">
-              <input id="contactbtn" class=" form-control btn  btn-lg  btn-block" value="Submit" />
+              <input type="submit" id="contactbtn" class="btn  btn-lg  btn-block" value="Submit" />
             </div>
 
           </form>
