--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,7 +15,7 @@
   <div class="container text-center">
     <div class="row">
       <div class="col mt-4">
-        <p>info@rooters.com</p>
+        <a href="mailto:nmwilsonri@gmail.com">info@rooters.com</a>
       </div>
     </div>
   </div>
@@ -27,7 +27,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
+<script src="js/main.js"></script>
 </body>
 
 </html>
