--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -27,6 +27,7 @@ html {
   color: white;
   padding-top: 0;
   padding-bottom: 0;
+  letter-spacing: 2px;
 }
 
 
@@ -65,6 +66,7 @@ p {
   border-radius: 0px;
   padding-top: 15px;
   padding-bottom: 15px;
+  font-size: 1.2em;
 }
 
 #bookbtn:hover {
