--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,13 +9,13 @@
           <hr>
           <form class="contact" method="POST" action="/contact">
             <div class="form-group">
-              <input class="form-control" type="text" name="name" placeholder="name" />
+              <input class="form-control" type="text" name="name" placeholder="name" required />
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="email" placeholder="email" />
+              <input class="form-control" type="email" name="email" placeholder="email" required/>
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="message" placeholder="What can we do for you?"></textarea>
+              <textarea class="form-control" name="message" placeholder="What can we do for you?" required></textarea>
             </div>
             <div class="form-group">
               <input type="submit" id="contactbtn" class="btn  btn-lg  btn-block" value="Submit" />
@@ -27,4 +27,4 @@
     </div>
   </div>
 
-  <% include ./partials/footer %>
+<% include ./partials/footer %>
