--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,13 +1,13 @@
 <footer class="footer navbar-fixed-bottom pt-4">
   <div class="container text-center">
     <div class="row">
-      <div class="col">
+      <div id="fb" class="col iconfooter">
         <a href="https://www.facebook.com"><i class="fab fa-facebook-f"></i></a>
       </div>
-      <div class="col">
+      <div class="col iconfooter">
         <a href="https://www.instagram.com"><i class="fab fa-instagram"></i></a>
       </div>
-      <div class="col">
+      <div class="col iconfooter">
         <a href="https://www.yelp.com"><i class="fab fa-yelp"></i></a>
       </div>
     </div>
