--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -79,7 +79,7 @@
                     <h4>Gnocchi<span class="price">$10</span></h4>
                   </li>
                   <li>
-                    <h4>Fried Squash Blossom <span class="price">$10</span></h4>
+                    <h4>Fried Squash<span class="price">$10</span></h4>
                   </li>
                   <li>
                     <h4>Mozz Sticks<span class="price">$8</span></h4>
